docs: atualizado documentação da api
